Issues communication note added

--- a/README
+++ b/README
@@ -10,8 +10,11 @@ To obtain the most recent version of the code or to report issues (or,
 better, provide fixes), please visit the Github pages at
 <https://github.com/olewolf/Analog_Buttons>.
 
+Inquiries via the Github issue tracker, please.  This way, others may benefit
+from the answers.
 
 (C) 2015 Ole Wolf <wolf@blazingangles.com>
+
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
